clang/test/BSC/Negative/Generic/StructAndFunction/undefined_func_call/undefined_func_call.cbs
// RUN: %clang_cc1 -verify %s

T1 f3<T1, T2>(T1 a, T2 b, int c) {
  T1 x1 = a + b;
  foo(c);   // expected-error {{use of undeclared identifier 'foo'}}
  return x1;
}

int main() {
  int a = 1;
  float b = 1.5;
  int c = 2;
  int d = f3<int, float>(a, b, c);
}